syntax = "proto3";

package crm;

// ============================================
// CONTACTS SERVICE
// ============================================
service ContactsService {
  rpc GetContact (GetContactRequest) returns (ContactResponse) {}
  rpc GetContacts (GetContactsRequest) returns (ContactsResponse) {}
  rpc CreateContact (CreateContactRequest) returns (ContactResponse) {}
  rpc UpdateContact (UpdateContactRequest) returns (ContactResponse) {}
  rpc DeleteContact (DeleteContactRequest) returns (DeleteContactResponse) {}
}

message GetContactRequest {
  string id = 1;
}

message GetContactsRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
  string account_id = 4; // Optional filter by account
}

message CreateContactRequest {
  string salutation = 1;
  string first_name = 2;
  string last_name = 3;
  string email = 4;
  string phone = 5;
  string mobile_phone = 6;
  string account_id = 7;
  string department = 8;
  string territory = 9;
  string mailing_street = 10;
  string mailing_city = 11;
  string mailing_state = 12;
  string mailing_zip = 13;
  string mailing_country = 14;
}

message UpdateContactRequest {
  string id = 1;
  string salutation = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone = 6;
  string mobile_phone = 7;
  string account_id = 8;
  string department = 9;
  string territory = 10;
  string mailing_street = 11;
  string mailing_city = 12;
  string mailing_state = 13;
  string mailing_zip = 14;
  string mailing_country = 15;
}

message DeleteContactRequest {
  string id = 1;
}

message ContactResponse {
  string id = 1;
  string salutation = 2;
  string first_name = 3;
  string last_name = 4;
  string email = 5;
  string phone = 6;
  string mobile_phone = 7;
  string account_id = 8;
  string account_name = 9; // Denormalized for convenience
  string department = 10;
  string territory = 11;
  string mailing_street = 12;
  string mailing_city = 13;
  string mailing_state = 14;
  string mailing_zip = 15;
  string mailing_country = 16;
  string created_at = 17;
  string updated_at = 18;
}

message ContactsResponse {
  repeated ContactResponse contacts = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteContactResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// ACCOUNTS SERVICE
// ============================================
service AccountsService {
  rpc GetAccount (GetAccountRequest) returns (AccountResponse) {}
  rpc GetAccounts (GetAccountsRequest) returns (AccountsResponse) {}
  rpc CreateAccount (CreateAccountRequest) returns (AccountResponse) {}
  rpc UpdateAccount (UpdateAccountRequest) returns (AccountResponse) {}
  rpc DeleteAccount (DeleteAccountRequest) returns (DeleteAccountResponse) {}
}

message GetAccountRequest {
  string id = 1;
}

message GetAccountsRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message CreateAccountRequest {
  string name = 1;
  string account_number = 2;
  string phone = 3;
  string website = 4;
  string billing_street = 5;
  string billing_city = 6;
  string billing_state = 7;
  string billing_zip = 8;
  string billing_country = 9;
  string shipping_street = 10;
  string shipping_city = 11;
  string shipping_state = 12;
  string shipping_zip = 13;
  string shipping_country = 14;
  string parent_account_id = 15;
  repeated string user_ids = 16;
}

message UpdateAccountRequest {
  string id = 1;
  string name = 2;
  string account_number = 3;
  string phone = 4;
  string website = 5;
  string billing_street = 6;
  string billing_city = 7;
  string billing_state = 8;
  string billing_zip = 9;
  string billing_country = 10;
  string shipping_street = 11;
  string shipping_city = 12;
  string shipping_state = 13;
  string shipping_zip = 14;
  string shipping_country = 15;
  string parent_account_id = 16;
}

message DeleteAccountRequest {
  string id = 1;
}

message AccountResponse {
  string id = 1;
  string name = 2;
  string account_number = 3;
  string phone = 4;
  string website = 5;
  string billing_street = 6;
  string billing_city = 7;
  string billing_state = 8;
  string billing_zip = 9;
  string billing_country = 10;
  string shipping_street = 11;
  string shipping_city = 12;
  string shipping_state = 13;
  string shipping_zip = 14;
  string shipping_country = 15;
  string parent_account_id = 16;
  string created_at = 17;
  string updated_at = 18;
}

message AccountsResponse {
  repeated AccountResponse accounts = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteAccountResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// LEADS SERVICE
// ============================================
service LeadsService {
  rpc GetLead (GetLeadRequest) returns (LeadResponse) {}
  rpc GetLeads (GetLeadsRequest) returns (LeadsResponse) {}
  rpc CreateLead (CreateLeadRequest) returns (LeadResponse) {}
  rpc UpdateLead (UpdateLeadRequest) returns (LeadResponse) {}
  rpc DeleteLead (DeleteLeadRequest) returns (DeleteLeadResponse) {}
}

message GetLeadRequest {
  string id = 1;
}

message GetLeadsRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message CreateLeadRequest {
  string owner_id = 1;
  string salutation = 2;
  string first_name = 3;
  string last_name = 4;
  string phone = 5;
  string email = 6;
  string shipping_street = 7;
  string billing_city = 8;
  string account_id = 9;
  string product_name = 10;
  string currency_code = 11;
  int32 employee_count = 12;
  string hq_code = 13;
  double billing_amount = 14;
  double exchange_rate = 15;
  string shipping_street_2 = 16;
  string shipping_city = 17;
  string shipping_state = 18;
  string shipping_country = 19;
  string shipping_zip_code = 20;
  string billing_street = 21;
  string billing_street_2 = 22;
  string billing_state = 23;
  string billing_country = 24;
  string billing_zip_code = 25;
}

message UpdateLeadRequest {
  string id = 1;
  string owner_id = 2;
  string salutation = 3;
  string first_name = 4;
  string last_name = 5;
  string phone = 6;
  string email = 7;
  string shipping_street = 8;
  string billing_city = 9;
  string account_id = 10;
  string product_name = 11;
  string currency_code = 12;
  int32 employee_count = 13;
  string hq_code = 14;
  double billing_amount = 15;
  double exchange_rate = 16;
  string shipping_street_2 = 17;
  string shipping_city = 18;
  string shipping_state = 19;
  string shipping_country = 20;
  string shipping_zip_code = 21;
  string billing_street = 22;
  string billing_street_2 = 23;
  string billing_state = 24;
  string billing_country = 25;
  string billing_zip_code = 26;
}

message DeleteLeadRequest {
  string id = 1;
}

message LeadResponse {
  string id = 1;
  string owner_id = 2;
  string salutation = 3;
  string first_name = 4;
  string last_name = 5;
  string phone = 6;
  string email = 7;
  string shipping_street = 8;
  string billing_city = 9;
  string account_id = 10;
  string product_name = 11;
  string currency_code = 12;
  int32 employee_count = 13;
  string hq_code = 14;
  double billing_amount = 15;
  double exchange_rate = 16;
  string created_at = 17;
  string updated_at = 18;
}

message LeadsResponse {
  repeated LeadResponse leads = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteLeadResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// DEALS SERVICE
// ============================================
service DealsService {
  rpc GetDeal (GetDealRequest) returns (DealResponse) {}
  rpc GetDeals (GetDealsRequest) returns (DealsResponse) {}
  rpc CreateDeal (CreateDealRequest) returns (DealResponse) {}
  rpc UpdateDeal (UpdateDealRequest) returns (DealResponse) {}
  rpc DeleteDeal (DeleteDealRequest) returns (DeleteDealResponse) {}
}

message GetDealRequest {
  string id = 1;
}

message GetDealsRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message CreateDealRequest {
  string name = 1;
  string account_id = 2;
  string owner_id = 3;
  string lead_id = 4;
  string contact_id = 5;
  double amount = 6;
  string closing_date = 7;
  string currency = 8;
  string type = 9;
  string stage = 10;
  double probability = 11;
  string lead_source = 12;
  string description = 13;
  string box_folder_id = 14;
  string campaign_source = 15;
  string quote = 16;
}

message UpdateDealRequest {
  string id = 1;
  string name = 2;
  string account_id = 3;
  string owner_id = 4;
  string lead_id = 5;
  string contact_id = 6;
  double amount = 7;
  string closing_date = 8;
  string currency = 9;
  string type = 10;
  string stage = 11;
  double probability = 12;
  string lead_source = 13;
  string description = 14;
  string box_folder_id = 15;
  string campaign_source = 16;
  string quote = 17;
}

message DeleteDealRequest {
  string id = 1;
}

message DealResponse {
  string id = 1;
  string name = 2;
  string account_id = 3;
  string owner_id = 4;
  string lead_id = 5;
  string contact_id = 6;
  double amount = 7;
  string closing_date = 8;
  string currency = 9;
  string type = 10;
  string stage = 11;
  double probability = 12;
  string lead_source = 13;
  string description = 14;
  string box_folder_id = 15;
  string campaign_source = 16;
  string quote = 17;
  string created_at = 18;
  string updated_at = 19;
}

message DealsResponse {
  repeated DealResponse deals = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteDealResponse {
  bool success = 1;
  string message = 2;
}

// ============================================
// AUTH SERVICE
// ============================================
service AuthService {
  rpc Register (RegisterRequest) returns (RegisterResponse) {}
  rpc Login (LoginRequest) returns (LoginResponse) {}
}

message RegisterRequest {
  string work_id = 1;
  string name = 2;
  string email = 3;
  string work_location = 4;
  string role_id = 5;
  string password = 6;
  string timezone = 7;
  string department = 8;
  string dept_manager = 9;
  string birthday = 10;
  string profile_id = 11;
}

message RegisterResponse {
  string id = 1;
  string work_id = 2;
  string name = 3;
  string email = 4;
  string work_location = 5;
  string role_id = 6;
  string profile_id = 7;
  string created_at = 8;
}

message LoginRequest {
  string email = 1;
  string password = 2;
}

message LoginResponse {
  string access_token = 1;
  string user_id = 2;
  string email = 3;
  string name = 4;
  string role_id = 5;
  string profile_id = 6;
}

// ============================================
// USERS SERVICE
// ============================================
service UsersService {
  rpc GetUser (GetUserRequest) returns (UserResponse) {}
  rpc GetUsers (GetUsersRequest) returns (UsersResponse) {}
  rpc CreateUser (CreateUserRequest) returns (UserResponse) {}
  rpc UpdateUser (UpdateUserRequest) returns (UserResponse) {}
  rpc DeleteUser (DeleteUserRequest) returns (DeleteUserResponse) {}
}

message GetUserRequest {
  string id = 1;
}

message GetUsersRequest {
  int32 page = 1;
  int32 limit = 2;
  string search = 3;
}

message CreateUserRequest {
  string work_id = 1;
  string name = 2;
  string email = 3;
  string work_location = 4;
  string role_id = 5;
  string password = 6;
  string timezone = 7;
  string department = 8;
  string dept_manager = 9;
  string birthday = 10;
  string profile_id = 11;
}

message UpdateUserRequest {
  string id = 1;
  string work_id = 2;
  string name = 3;
  string email = 4;
  string work_location = 5;
  string role_id = 6;
  string password = 7;
  string timezone = 8;
  string department = 9;
  string dept_manager = 10;
  string birthday = 11;
  string profile_id = 12;
}

message DeleteUserRequest {
  string id = 1;
}

message UserResponse {
  string id = 1;
  string work_id = 2;
  string name = 3;
  string email = 4;
  string work_location = 5;
  string role_id = 6;
  string profile_id = 7;
  string created_at = 8;
  string updated_at = 9;
}

message UsersResponse {
  repeated UserResponse users = 1;
  int32 total = 2;
  int32 page = 3;
  int32 limit = 4;
}

message DeleteUserResponse {
  bool success = 1;
  string message = 2;
}

